--- a/app/views/ecran1.html
+++ b/app/views/ecran1.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div ng-controller="ecran10Controller as Ecran10Ctrlr">
+   <h1> Ecran 1 voir le resultat </h1>
 
-</body>
-</html>
+</div>
