--- a/app/views/ecran1.html
+++ b/app/views/ecran1.html
@@ -1,4 +1,80 @@
-<div ng-controller="ecran10Controller as Ecran10Ctrlr">
+<div ng-controller="ecran10Controller as ecran10Ctrlr">
    <h1> Ecran 1 voir le resultat </h1>
+
+   <div class="container">
+
+      <header class="row">
+         <div class="col-lg-12"> Entete de la page ici  </div>
+      </header>
+
+
+      <div class="row" >
+         <div class="col-sm-6" >
+            <div class="col-lg-12">
+               <table>
+                  <tr>
+                     <td>Country</td>
+                  </tr>
+                  <tr ng-repeat="pays in ecran10Ctrlr.countrys">
+                     <td>
+                        {{pays.country}}
+                     </td>
+                  </tr>
+               </table>
+            </div>
+         </div>
+
+         <div class="col-sm-6"  ng-repeat="pays in ecran10Ctrlr.countrys">
+            <div class="col-lg-12">
+               <div class="col-sm-3">{{pays.all}} </div>
+               <div class="col-sm-3">{{pays.all}} </div>
+               <div class="col-sm-3">{{pays.all}} </div>
+               <div class="col-sm-3">{{pays.all}} </div>
+            </div>
+         </div>
+
+
+
+         <div>
+            <nav>
+               <ul class="pagination pagination-sm">
+                  <li>
+                     <a href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                     </a>
+                  </li>
+                  <li><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+                  <li><a href="#">5</a></li>
+                  <li>
+                     <a href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                     </a>
+                  </li>
+               </ul>
+            </nav>
+         </div>
+      </div>
+
+
+      <div>
+         <nav>
+            <ul class="pager">
+               <li><a href="#">Previous</a></li>
+               <li><a href="#">Next</a></li>
+            </ul>
+         </nav>
+      </div>
+
+
+      <footer class="row">
+         <div class="col-lg-12"> Pied de page  </div>
+      </footer>
+   </div>
+
+
+
 
 </div>
