--- a/app/views/ecran10.html
+++ b/app/views/ecran10.html
@@ -11,9 +11,9 @@
 
         <div class="row">
             <div class="col-sm-4">
-                <di class="col-lg-12">
+                <div class="col-lg-12">
                     cleve   dfghdfhdfh
-                </di>
+                </div>
             </div>
 
             <div class="col-sm-8">
